--- a/AlotOfCities/Components/Cities/CitiesViewController.xib
+++ b/AlotOfCities/Components/Cities/CitiesViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CitiesTableViewController" customModule="AlotOfCities" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CitiesViewController" customModule="AlotOfCities" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="qXF-B8-F0c" id="YhF-fH-DOQ"/>
                 <outlet property="view" destination="Irm-7e-fY1" id="WxP-B5-vzk"/>
